src/TeamTavern/Client/Style/Input.scss
.input-group {
    display: flex;
    flex-direction: column;
    margin-bottom: 28px;
}

.input-label {
    display: flex;
    margin-bottom: 7px;
    line-height: 21px;
}

.input-sublabel {
    font-size: 12px;
    color: #888;
}

.text-line-input {
    @extend %bordered;
    font-family: $font;
    font-size: 14px;
    line-height: 20px;
    padding: 9px 12px;
}

.text-input {
    @extend .text-line-input;
    resize: vertical;
    height: 160px;
}

.checkbox-input {
    width: 20px;
    height: 20px;
    margin: 0 7px 0 0;
    cursor: pointer;
}

